--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,8 +14,24 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="nav">
+    <% if logged_in? %>
+      <ul>
+        <li><a href="/logout">Log Out</a><br>
+        <li><a href="/travel_destinations">See all Travel Destinations</a><br>
+        <li><a href="/travel_destinations/new">Add a Destination</a><br>
+      </ul>
+      <% end %>
 
+    </div>
+    
+    <div class="wrapper">
+      <% if flash[:message] %>
+        <h3 style="color: green;"><%= flash[:message] %></h3>
+      <% end %>
+      <% if flash[:error] %>
+        <h3 style="color: red;"><%= flash[:error] %></h3>
+      <% end %>
         <%= yield %>
 
       <footer class="branding">
@@ -30,3 +46,4 @@
     <![endif]-->
   </body>
 </html>
+
