added more festures to add more details

--- a/app/views/travel_destinations/new.erb
+++ b/app/views/travel_destinations/new.erb
@@ -1,10 +1,13 @@
 <h1> Where would you like to go? </h1>
 <br>
 <form method="post" action="/travel_destinations">
+    <label for="title">[State, City]</label><br>
     <input type="text" name="title">
-    <br>
-    <label for="content">Anyplace specific or anything you'd like to see?</label>
-    <input type="text" name="content">    
+    <br><br>
+    <label for="content">Anyplace specific or anything you'd like to see?</label><br><br>
+    <input type="text" name="content"><br><br>
+    <label for="moreContent">More on it?</label> 
+    <input type="textarea" name="moreContent">  
     <br><br>
     <input type="submit" value="Add to the list!">
 </form>
