--- a/app/views/travel_destinations/show.erb
+++ b/app/views/travel_destinations/show.erb
@@ -1,4 +1,5 @@
 <h2><%= @travel_destination.title %></h2>
+<h3><%= @travel_destination.city %></h3>
 <h3><%= @travel_destination.content %></h3>
 <% if authorized_to_edit?(@travel_destination) %> 
 <br>
