--- a/app/views/travel_destinations/new.erb
+++ b/app/views/travel_destinations/new.erb
@@ -1,8 +1,11 @@
 <h1> Where would you like to go? </h1>
 <br>
 <form method="post" action="/travel_destinations">
-    <label for="title">[State, City]</label><br>
+    <label for="title">[State]</label><br>
     <input type="text" name="title">
+    <br><br>
+    <label for="city">[City]</label><br>
+    <input type="text" name="city">
     <br><br>
     <label for="content">Anyplace specific or anything you'd like to see?</label><br><br>
     <input type="text" name="content"><br><br>
